# Capstone-Data-Engineering

./: .env.example  .gitignore  LICENSE  README.md  env.example  main.py  prefect.yaml  profiles.yml  pyproject.toml
.streamlit/: config.toml
conf/: apis.yml  ingestion.yml  logging.yml
dashboard/: app.py
data/dashboard/: gold_economic_dashboard.csv  gold_market_snapshot.csv  gold_market_trends.csv  gold_metro_comparison.csv  gold_role_analysis.csv  gold_role_top_skills.csv  gold_skills_demand.csv
dbt/: .user.yml  dbt_project.yml  dependencies.yml  package-lock.yml  packages.yml  profiles.sample.yml
dbt/macros/: date_format.sql  dateadd.sql  day_of_week.sql  duckdb_create_constraints.sql  epoch.sql  epoch_seconds.sql  explode_csv.sql  explode_csv_from.sql  generate_schema.sql  identifier.sql  inline_mapping.sql  parquet_source.sql  safe_cast.sql  skills_array_agg.sql  split_part_zero_based.sql  string_agg.sql  unpivot_fred_series.sql
dbt/seeds/: seeds.yml
docs/: architecture-draft.excalidraw
infra/: .gitignore  main.tf  outputs.tf  terraform.tfvars.example  variables.tf
orchestration/flows/: daily_pipeline.py
orchestration/tasks/: dbt_tasks.py  ingestion_tasks.py  notifications.py  storage_tasks.py
scripts/: daily-pipeline.sh  dbt_run.sh  export_for_tableau.sql  gcloud-init.sh  gold_diagnostics.sql  turn_to_csv.sh  with-secrets.sh
src/clients/: fred_client.py
src/ingestion/: BLSClient.py  __init__.py  acs_client.py  adzuna_client.py  bls_client.py  databricks_uploader.py  fred_client.py  gcs_uploader.py  kaggle_downloader.py  onet_downloader.py  (+1 more)
(+70 files in other folders)
